# CodeGenesis

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
configs/: default.yaml  yolo_dataset.yaml
data/train/labels/: image_001xyz.txt  image_002xyz.txt  image_003xyz.txt  image_004xyz.txt  image_005xyz.txt  image_006xyz.txt  image_007xyz.txt  image_009xyz.txt  image_010xyz.txt  image_011xyz.txt  image_012xyz.txt  image_013xyz.txt  image_014xyz.txt  image_015xyz.txt  image_016xyz.txt  image_017xyz.txt  image_018xyz.txt  image_019xyz.txt  image_020xyz.txt  image_022xyz.txt  image_023xyz.txt  image_024xyz.txt  image_025xyz.txt  image_026xyz.txt  image_027xyz.txt  image_028xyz.txt  image_029xyz.txt  image_030xyz.txt  image_031xyz.txt  image_032xyz.txt  image_034xyz.txt  image_035xyz.txt  image_036xyz.txt  image_037xyz.txt  image_038xyz.txt  image_039xyz.txt  image_040xyz.txt  image_041xyz.txt  image_042xyz.txt  image_043xyz.txt  (+8240 more)
data/val/labels/: image_008xyz.txt  image_021xyz.txt  image_033xyz.txt  image_060xyz.txt  image_064xyz.txt  image_084xyz.txt  image_095xyz.txt  image_1008xyz.txt  image_1009xyz.txt  image_1023xyz.txt  image_1026xyz.txt  image_1029xyz.txt  image_102xyz.txt  image_1061xyz.txt  image_1070xyz.txt  image_1092xyz.txt  image_1095xyz.txt  image_1096xyz.txt  (+902 more)
notebooks/: exploration.ipynb
scripts/: fix_yolo_labels.py  normalize_yolo_labels.py  prepare_data.py  split_train_val.py  verify_golden_set.py
src/: dataset.py  evaluate.py  model.py  train.py
tests/integration/: test_training_pipeline.py
tests/unit/: test_dataset.py
(+97 files in other folders)
